Scrollbar behavior on mobile fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
   font-weight: <weight>;
   font-style: normal;
 } */
+html {
+    scrollbar-gutter: stable;
+    scroll-behavior: smooth;
+}
 :where(h1, h2, h3, h4, p){
     margin: 0;
     padding: 0;
